# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "pyballista"
version = "51.0.0"
homepage = "https://datafusion.apache.org/ballista/"
repository = "https://github.com/apache/datafusion-ballista"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
description = "Apache Arrow Ballista Python Client"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82.0"
include = ["/src", "/ballista", "/LICENSE.txt", "pyproject.toml", "Cargo.toml", "Cargo.lock"]
publish = false

[dependencies]
async-trait = "0.1.89"
ballista = { version = "51.0.0" }
ballista-core = { version = "51.0.0" }
ballista-executor = { version = "51.0.0", default-features = false }
ballista-scheduler = { version = "51.0.0", default-features = false }
datafusion = { version = "51", features = ["pyarrow", "avro"] }
datafusion-proto = { version = "51" }
datafusion-python = { version = "51" }
log = { version = "0.4" }
pyo3 = { version = "0.26", features = ["extension-module", "abi3", "abi3-py310"] }
pyo3-log = "0.13"
tokio = { version = "1.48", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tonic = { version = "0.14" }

[lib]
crate-type = ["cdylib"]
name = "ballista"

[build-dependencies]
pyo3-build-config = "0.26"
