# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["maturin>=1.8.0,<2.0"]
build-backend = "maturin"

[project]
name = "ballista"
description = "Python client for Apache Arrow Ballista Distributed SQL Query Engine"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
keywords = ["ballista", "sql", "rust", "distributed"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = [
    "pyarrow>=21.0.0",
    "datafusion==51",
    "typing-extensions;python_version<'3.13'",
]
dynamic = ["version"]

[project.urls]
homepage = "https://datafusion.apache.org/ballista"
documentation = "https://datafusion.apache.org/ballista"
repository = "https://github.com/apache/datafusion-ballista"

[tool.isort]
profile = "black"

[tool.maturin]
python-source = "python"
module-name = "ballista._internal_ballista"
include = [
    { path = "Cargo.lock", format = "sdist" }
]
exclude = [".github/**", "ci/**", ".asf.yaml"]
# Require Cargo.lock is up to date
locked = true

[dependency-groups]
dev = [
    "maturin>=1.8.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.9.1",
    "toml>=0.10.2",
    "pygithub==2.5.0",
]
docs = [
]
