# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista"
description = "Ballista Distributed Compute"
license = "Apache-2.0"
version = "0.9.0"
homepage = "https://github.com/apache/arrow-ballista"
repository = "https://github.com/apache/arrow-ballista"
readme = "README.md"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
edition = "2021"
rust-version = "1.59"

[dependencies]
ballista-core = { path = "../core", version = "0.9.0" }
ballista-executor = { path = "../executor", version = "0.9.0", optional = true }
ballista-scheduler = { path = "../scheduler", version = "0.9.0", optional = true }
deltalake = { git = "https://github.com/spaceandtimelabs/delta-rs.git", rev = "520b5c84698641a8fd7d35b0636ff12c2e3d2c2d", features = ["datafusion-ext"], optional = true }
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev = "525ac4567ad8d86ad085d8439d890b1f9e9e6bb9" }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion.git", rev = "525ac4567ad8d86ad085d8439d890b1f9e9e6bb9" }
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
sqlparser = "0.26"
tempfile = "3"
tokio = "1.0"

[features]
default = []
hdfs = ["ballista-core/hdfs"]
hdfs3 = ["ballista-core/hdfs3"]
s3 = ["ballista-core/s3"]
delta = ["deltalake"]
standalone = ["ballista-executor", "ballista-scheduler"]
