# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista"
description = "Ballista Distributed Compute"
license = "Apache-2.0"
version = "52.0.0"
homepage = "https://datafusion.apache.org/ballista/"
repository = "https://github.com/apache/datafusion-ballista"
readme = "README.md"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
async-trait = { workspace = true }
ballista-core = { path = "../core", version = "52.0.0" }
ballista-executor = { path = "../executor", version = "52.0.0", optional = true }
ballista-scheduler = { path = "../scheduler", version = "52.0.0", optional = true }
datafusion = { workspace = true }
log = { workspace = true }

tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
ballista-executor = { path = "../executor", version = "52.0.0" }
ballista-scheduler = { path = "../scheduler", version = "52.0.0" }
ctor = { workspace = true }
datafusion-proto = { workspace = true }
env_logger = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tonic = { workspace = true }

[features]
default = ["standalone"]
standalone = ["ballista-executor", "ballista-scheduler"]
# tests which need change of RUST_MIN_STACK in order for 
# tests to run. 
test_extended_stack = []
