# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista-core"
description = "Ballista Distributed Compute"
license = "Apache-2.0"
version = "0.12.0"
homepage = "https://github.com/apache/arrow-ballista"
repository = "https://github.com/apache/arrow-ballista"
readme = "README.md"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
edition = "2021"
build = "build.rs"

# Exclude proto files so crates.io consumers don't need protoc
exclude = ["*.proto"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[features]
docsrs = []
# Used for testing ONLY: causes all values to hash to the same value (test for collisions)
force_hash_collisions = ["datafusion/force_hash_collisions"]


[dependencies]
arrow-flight = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", default-features = false }
clap = { workspace = true }
configure_me = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
datafusion-proto-common = { workspace = true }
futures = { workspace = true }
itertools = "0.13"
log = { workspace = true }
md-5 = { version = "^0.10.0" }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
rustc_version = "0.4.0"
tonic-build = { workspace = true }
