[package]
name = "ballista-history"
description = "Event-log schema, writer, and reader for Ballista's history server"
license = "Apache-2.0"
version = "53.0.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["rt", "sync", "fs", "io-util", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "sync", "fs", "io-util", "macros", "rt-multi-thread"] }
tempfile = { workspace = true }
