# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista-scheduler"
description = "Ballista Distributed Compute - Scheduler"
license = "Apache-2.0"
version = "0.12.0"
homepage = "https://github.com/apache/arrow-ballista"
repository = "https://github.com/apache/arrow-ballista"
readme = "README.md"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
edition = "2021"

[package.metadata.configure_me.bin]
scheduler = "scheduler_config_spec.toml"

[[bin]]
name = "ballista-scheduler"
path = "src/bin/main.rs"

[features]
default = ["flight-sql"]
flight-sql = []
prometheus-metrics = ["prometheus", "once_cell"]

[dependencies]
anyhow = "1"
arrow-flight = { workspace = true }
async-trait = { workspace = true }
axum = "0.6.20"
ballista-core = { path = "../core", version = "0.12.0", features = ["s3"] }
base64 = { version = "0.22" }
clap = { workspace = true }
configure_me = { workspace = true }
dashmap = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
futures = { workspace = true }
graphviz-rust = "0.9.0"
http = "0.2.9"
log = { workspace = true }
object_store = { workspace = true }
once_cell = { version = "1.16.0", optional = true }
parking_lot = { workspace = true }
parse_arg = { workspace = true }
prometheus = { version = "0.13", features = ["process"], optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ballista-core = { path = "../core", version = "0.12.0" }

[build-dependencies]
configure_me_codegen = { workspace = true }
tonic-build = { workspace = true }
