[package]
name = "ballista-tests"
description = "Ballista Distributed Compute - Tests"
license = "Apache-2.0"
version = "0.11.0"
homepage = "https://github.com/apache/arrow-ballista"
repository = "https://github.com/apache/arrow-ballista"
readme = "README.md"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1.41"
ballista = { path = "../client", version = "0.11.0" }
ballista-core = { path = "../core", version = "0.11.0" }
ballista-executor = { path = "../executor", version = "0.11.0" }
ballista-scheduler = { path = "../scheduler", version = "0.11.0" }
datafusion = { workspace = true } 
datafusion-proto= { workspace = true }
env_logger = "0.10"
futures = "0.3"
lazy_static = "1.4"
prost = "0.11"
prost-types = "0.11"

tokio = { version = "1.0", features = ["full"] }
tonic = "0.8"

[build-dependencies]
anyhow = "1"
prost-build = { version = "0.11" }
rustc_version = "0.4.0"
tonic-build = { version = "0.8", default-features = false, features = [
    "transport",
    "prost",
] }
