# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "kapot"
version = "0.1.0"
description = "kapot Distributed Compute"
license = "Apache-2.0"
homepage = "https://github.com/apache/arrow-kapot"
repository = "https://github.com/apache/arrow-kapot"
readme = "README.md"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
edition = "2021"
rust-version = "1.72"

[dependencies]
kapot-core = { path = "../core" }
kapot-executor = { path = "../executor",  optional = true }
kapot-scheduler = { path = "../scheduler", optional = true }

datafusion = { workspace = true }
datafusion-proto = { workspace = true }
sqlparser = { workspace = true }

futures = "0.3"
log = "0.4"
parking_lot = "0.12"
tempfile = "3"
tokio = "1.0"

[features]
azure = ["kapot-core/azure"]
default = []
hdfs = ["kapot-core/hdfs"]
hdfs3 = ["kapot-core/hdfs3"]
s3 = ["kapot-core/s3"]
standalone = ["kapot-executor", "kapot-scheduler"]
