# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista-executor"
description = "Ballista Distributed Compute - Executor"
license = "Apache-2.0"
version = "0.8.0"
homepage = "https://github.com/apache/arrow-ballista"
repository = "https://github.com/apache/arrow-ballista"
readme = "README.md"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
edition = "2018"

[package.metadata.configure_me.bin]
executor = "executor_config_spec.toml"

[features]
snmalloc = ["snmalloc-rs"]

[dependencies]
anyhow = "1"
arrow = { git = "https://github.com/apache/arrow-rs.git", rev = "4df1f3c62f6d089d8cf02892168b9179e4c8c6fd" }
arrow-flight = { git = "https://github.com/apache/arrow-rs.git", rev = "4df1f3c62f6d089d8cf02892168b9179e4c8c6fd" }
async-trait = "0.1.41"
ballista-core = { path = "../core", version = "0.8.0", features = ["s3"] }
chrono = { version = "0.4", default-features = false }
configure_me = "0.4.0"
datafusion = { git = "https://github.com/spaceandtimelabs/arrow-datafusion.git", rev = "ec72b6292c83d767790c1eb54cf80e75caa5c3c9" }
datafusion-proto = { git = "https://github.com/spaceandtimelabs/arrow-datafusion.git", rev = "ec72b6292c83d767790c1eb54cf80e75caa5c3c9" }
futures = "0.3"
hyper = "0.14.4"
log = "0.4"
num_cpus = "1.13.0"
parking_lot = "0.12"
snmalloc-rs = { version = "0.3", optional = true }
tempfile = "3"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "parking_lot", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.8"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", features = ["fmt", "env-filter", "ansi"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]

[build-dependencies]
configure_me_codegen = "0.4.0"

# use libc on unix like platforms to set worker priority in DedicatedExecutor
[target."cfg(unix)".dependencies.libc]
version = "0.2"
